Fix all the issues with using the management service
