# backend/src/routes/index.ts
@@ -21,6 +21,7 @@ export class Route implements Routes {
     this.router.get('/information/masternodes', this.masterNodeController.getMasternodesInfo);
     this.router.get('/information/network', this.blocksController.getBlockChainStats);
     this.router.get('/information/relayer', this.relayerController.getRelayerRelatedDetails);
+    this.router.get('/information/chainsetting', this.relayerController.getChainDetails);
     this.router.get('/confirmation', this.blocksController.confirmBlock);
   }
 }
